# emeocv

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Directory.cpp  Directory.h  ImageInput.cpp  ImageInput.h  ImageProcessor.cpp  ImageProcessor.h  KNearestOcr.cpp  KNearestOcr.h  Makefile  Plausi.cpp  Plausi.h  README.md  RRDatabase.cpp  RRDatabase.h  config.yml  create_rrd.sh  graph.sh  main.cpp  training.yml
cmake/: FindLog4cpp.cmake  FindRrdTool.cmake  dependencies.cmake
www/: graph.pl  index.html  table.pl
